Done some changes in frontend

--- a/Project-1/Proj Frontend/Education.html
+++ b/Project-1/Proj Frontend/Education.html
@@ -57,9 +57,9 @@
             <input type="text"  id="y1" placeholder="year_Of_Passing" style=font-size:40px; />
         </div>
 
-        <button type="button" onclick="Add()" id="ad1">Add </button>
-        <button type="button" onclick="GetallDetails()" id="getall1">GetallDetails</button>
-        <button type="button" onclick="Update()" id="upd1">Update Details</button>
+        <button type="button" onclick="Add()" id="ad1"  style=font-size:30px>Add </button>
+        <button type="button" onclick="GetallDetails()" id="getall1" style=font-size:30px>GetallDetails</button>
+        <button type="button" onclick="Update()" id="upd1" style=font-size:30px>Update Details</button>
 
         <button type="button" onclick="history.back()"  class="btn solid" style=font-size:35px; >Go Back</button>
         
