--- a/Project-1/Proj Frontend/DisplayAll.html
+++ b/Project-1/Proj Frontend/DisplayAll.html
@@ -26,10 +26,10 @@
         <form>
            <div class="Main">
 
-            <div class="input-field">
+             <!-- <div class="input-field">
                 <p class="myclass">ADD Details:</p>
                 <button type="submit"  class="butt" onclick="Add()" id="ad" ><a href="AddDetails.html">ADDDetails</a></button>
-            </div>
+            </div>  -->
             <div class="input-field>
                 <p class="myclass">Update Details</p>
                 <button type="submit"  class="butt" onclick="Update()" id="upd" ><a href="UpdateDetail.html">Update Details</a></button>
