--- a/Project-1/Proj Frontend/welcomepage.html
+++ b/Project-1/Proj Frontend/welcomepage.html
@@ -118,12 +118,13 @@
                                 
                                 <a class="welcomemenu" href="welcomepage.html" ><i class="fa fa-home"> </i>Home</a>
                                 <!-- <a href="Profilepage.html">User-Profile</a> -->
-                                  <a href="GETAll.html">Trainer All Details Section </a>
+                                  <a href="GETAll.html">Trainer All Details</a>
                                   <a href="AddDetails.html">Add Details</a>
                                   <a href="UpdateDetail.html">Update Details</a>
                                   <a href="DeleteAllDetails.html">Delete Trainer Details </a>
                                   <a href="AboutMe.html">About Me</a>
                                   <a href="ContactUs.html">Contact Us</a>
+                                   <a href="Profilepage.html">Sign In</a>
                                   
                                    <div class="search">
                                        <input type="text" placeholder="Search" name="search">
